--- a/Frontend/css/styles.css
+++ b/Frontend/css/styles.css
@@ -51,56 +51,12 @@ nav {
   background-color: #fff;
   border-radius: 4px;
   border: 1px solid #d9d9d9;
+  margin-bottom: 20px;
 }
 
-.card-top {
+.line-bottom {
   padding: 10px;
-  display: flex;
-  justify-content: center;
   border-bottom: 1px solid #d9d9d9;
-}
-
-.card-top img {
-  width: 220px;
-}
-
-.card-bottom {
-  padding: 10px 20px 20px 20px;
-}
-
-.card-bottom h3 {
-  color: #0caf1d;
-  font-size: 20px;
-}
-
-.card-bottom h4 {
-  color: #636363;
-  font-size: 14px;
-}
-
-.card-bottom p {
-  color: #636363;
-  font-size: 12px;
-  margin: 10px 0;
-  font-weight: 400;
-}
-
-.category-container {
-  display: flex;
-}
-
-.card-category {
-  background-color: #636363;
-  border-radius: 4px;
-  color: #fff;
-  font-size: 12px;
-  height: 30px;
-  font-weight: 700;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0 20px;
-  margin-right: 20px;
 }
 
 .mb20 {
