--- a/Frontend/css/styles.css
+++ b/Frontend/css/styles.css
@@ -1,5 +1,25 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,700;1,400&family=Roboto:wght@100;300;500;700&display=swap");
 
+:root {
+  --dsc-color-bg-primary: #e8e8e8;
+  --dsc-color-bg-secondary: #ffe500;
+  --dsc-color-bg-tertiary: #636363;
+  --dsc-color-bg-quaternary: #0caf1d;
+
+  --dsc-color-card-bg: #fff;
+  --dsc-color-card-border: #d9d9d9;
+
+  --dsc-color-btn-primary: #3483fa;
+  --dsc-color-btn-inverse: #fff;
+
+  --dsc-color-font-primary: #636363;
+  --dsc-color-font-secondary: #0caf1d;
+  --dsc-color-font-tertiary: #fff;
+  --dsc-color-font-placeholder: #d9d9d9;
+
+  --dsc-color-error: #f33;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -15,18 +35,18 @@ a:hover {
 
 html,
 body {
-  background-color: #e8e8e8;
+  background-color: var(--dsc-color-bg-primary);
 }
 
 header {
-  background-color: #ffe500;
+  background-color: var(--dsc-color-bg-secondary);
   height: 70px;
   display: flex;
   align-items: center;
 }
 
 nav {
-  color: #636363;
+  color: var(--dsc-color-font-primary);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -48,15 +68,15 @@ nav {
 }
 
 .card {
-  background-color: #fff;
+  background-color: var(--dsc-color-card-bg);
   border-radius: 4px;
-  border: 1px solid #d9d9d9;
+  border: 1px solid var(--dsc-color-font-placeholder);
   margin-bottom: 20px;
 }
 
 .line-bottom {
   padding: 10px;
-  border-bottom: 1px solid #d9d9d9;
+  border-bottom: 1px solid var(--dsc-color-font-placeholder);
 }
 
 .mb20 {
@@ -79,11 +99,11 @@ nav {
 }
 
 .btn-blue {
-  background-color: #3483fa;
-  color: #fff;
+  background-color: var(--dsc-color-btn-primary);
+  color: var(--dsc-color-btn-inverse);
 }
 
 .btn-white {
-  background-color: #fff;
-  color: #3483fa;
+  background-color: var(--dsc-color-btn-inverse);
+  color: var(--dsc-color-btn-primary);
 }
