--- a/Frontend/css/details.css
+++ b/Frontend/css/details.css
@@ -1,42 +1,44 @@
-#product-details {
+@import url("styles.css");
+
+#product-details-section {
     padding: 20px 0;
 }
 
-.product-details-top {
+.dsc-product-details-top {
     display: flex;
     justify-content: center;
   }
   
-  .product-details-top img {
+  .dsc-product-details-top img {
     width: 220px;
   }
   
-  .product-details-bottom {
+  .dsc-product-details-bottom {
     padding: 10px 20px 20px 20px;
   }
   
-  .product-details-bottom h3 {
+  .dsc-product-details-bottom h3 {
     color: var(--dsc-color-bg-quaternary);
     font-size: 20px;
   }
   
-  .product-details-bottom h4 {
+  .dsc-product-details-bottom h4 {
     color: var(--dsc-color-font-primary);
     font-size: 14px;
   }
   
-  .product-details-bottom p {
+  .dsc-product-details-bottom p {
     color: var(--dsc-color-font-primary);
     font-size: 12px;
     margin: 10px 0;
     font-weight: 400;
   }
 
-.category-container {
+.dsc-category-container {
     display: flex;
   }
   
-  .card-category {
+  .dsc-card-category {
     background-color: var(--dsc-color-font-primary);
     border-radius: 4px;
     color: var(--dsc-color-card-bg);
