--- a/Frontend/css/details.css
+++ b/Frontend/css/details.css
@@ -1,10 +1,11 @@
 @import url("styles.css");
 
 #product-details-section {
-    padding: 20px 0;
+    padding: 0 20px;
 }
 
 .dsc-product-details-top {
+  padding: 10px;
     display: flex;
     justify-content: center;
   }
@@ -36,9 +37,11 @@
 
 .dsc-category-container {
     display: flex;
+    flex-wrap: wrap;
+    
   }
   
-  .dsc-card-category {
+  .dsc-category {
     background-color: var(--dsc-color-font-primary);
     border-radius: 4px;
     color: var(--dsc-color-card-bg);
@@ -49,5 +52,6 @@
     justify-content: center;
     align-items: center;
     padding: 0 20px;
+    margin-bottom: 10px;
     margin-right: 20px;
   }
