--- a/Frontend/css/styles.css
+++ b/Frontend/css/styles.css
@@ -37,13 +37,19 @@ html,
 body {
   background-color: var(--dsc-color-bg-primary);
 }
+
+main {
+  padding: 0;
+}
 /*------------------------------------------------*/
 /*header styles*/
-header {
+header { 
   background-color: var(--dsc-color-bg-secondary);
+  width: 100%;
   height: 70px;
   display: flex;
   align-items: center;
+  padding: 0 20px;
 }
 
 nav {
@@ -54,7 +60,7 @@ nav {
 }
 
 nav h1 {
-  font-size: 24px;
+  font-size: 16px;
 }
 
 nav a {
@@ -75,17 +81,8 @@ nav a {
 }
 /*---------------------------------------------*/
 
-/*card styles*/
-.dsc-carrinho {
-  text-align: right;
-  padding-left: 712px;
-}
-
-#card-details {
-  margin-top: 12px;
-}
-
 .dsc-card {
+  margin-top: 20px;
   background-color: var(--dsc-color-card-bg);
   border-radius: 4px;
   border: 1px solid var(--dsc-color-font-placeholder);
@@ -100,7 +97,7 @@ nav a {
 /*----------------------------------*/
 /*button styles*/
 .dsc-btn-container {
-  width: 220px;
+  width: 280px;
 }
 
 .btn {
