--- a/Frontend/css/styles.css
+++ b/Frontend/css/styles.css
@@ -67,6 +67,27 @@ nav a {
   font-size: 14px;
   font-weight: 700;
 }
+
+.dsc-navbar-right {
+  display: flex;
+  align-items: center;
+}
+
+.dsc-menu-item {
+  margin-right: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.dsc-menu-item p {
+  display: none;
+  margin-left: 5px;
+  font-size: 14px;
+}
+
+.dsc-menu-item-active {
+  font-weight: 700;
+}
 /*----------------------------------------------*/
 /*generic styles-*/
 
@@ -97,7 +118,13 @@ nav a {
 /*----------------------------------*/
 /*button styles*/
 .dsc-btn-container {
-  width: 280px;
+  width: 100%;
+}
+
+@media(min-width:576px ){
+  .dsc-btn-container {
+    width: 280px;
+  }
 }
 
 .btn {
