--- a/Frontend/css/cart.css
+++ b/Frontend/css/cart.css
@@ -1,7 +1,7 @@
 @import url("styles.css");
 
 #cart-container-section {
-  padding: 20px 0;
+  padding: 0 20px;
 }
 
 .dsc-cart-product {
@@ -11,7 +11,7 @@
 
 .dsc-cart-item-container {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   padding: 0 20px;
 }
 
@@ -22,6 +22,7 @@
 
 .dsc-cart-item-description {
   padding: 10px 0;
+  margin-left: 20px;
   color: var(--dsc-color-font-primary);
 }
 
@@ -66,8 +67,14 @@
 
 .dsc-cart-total-container {
   display: flex;
-  justify-content: right;
+  justify-content: space-between;
   padding: 10px 20px 10px 20px;
+}
+
+.dsc-cart-total {
+  display: flex;
+  font-weight: 700;
+  color: var(--dsc-color-font-primary);
 }
 
 .dsc-cart-total-container h3 {
