--- a/Frontend/css/cart.css
+++ b/Frontend/css/cart.css
@@ -59,7 +59,8 @@
 }
 
 .dsc-cart-item-right {
-  padding: 10px 0;
+  padding: 10px;
+  padding-top: 0;
   font-weight: 700;
   color: var(--dsc-color-font-secondary);
   font-size: 12px;
@@ -80,4 +81,16 @@
 .dsc-cart-total-container h3 {
   color: var(--dsc-color-font-secondary);
   font-size: 16px;
+}
+
+@media(min-width: 576px){
+  .dsc-cart-item-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .dsc-cart-item-right {
+    padding: 10px 0;
+  }
 }
