--- a/Frontend/css/styles.css
+++ b/Frontend/css/styles.css
@@ -97,9 +97,6 @@ nav a {
   margin: 0 auto;
 }
 
-.dsc-mb20 {
-  margin-bottom: 20px;
-}
 /*---------------------------------------------*/
 
 .dsc-card {
@@ -146,5 +143,16 @@ nav a {
 .dsc-btn-white {
   background-color: var(--dsc-color-btn-inverse);
   color: var(--dsc-color-btn-primary);
+}
+
+.dsc-btn-next-page {
+  border: 1px solid var(--dsc-color-btn-primary) ;
+  padding: 10px;
+  border-radius: 4px;
+  color: var(--dsc-color-btn-primary);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 700;
+  cursor: pointer;
 }
 /*---------------------------------------------*/
