--- a/Frontend/css/styles.css
+++ b/Frontend/css/styles.css
@@ -135,7 +135,19 @@ nav a {
   margin-bottom: 20px;
 }
 
+.dsc-btn {
+  width: 100%;
+  height: 42px;
+  border-radius: 4px;
+  font-size: 16px;
+  font-weight: 700;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .dsc-btn-blue {
+  border: none;
   background-color: var(--dsc-color-btn-primary);
   color: var(--dsc-color-btn-inverse);
 }
@@ -157,3 +169,19 @@ nav a {
   margin-top: 20px;
 }
 /*---------------------------------------------*/
+/*form styles*/
+.dsc-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px 20px;
+}
+
+.dsc-form h2 {
+  font-size: 16px;
+  color: var(--dsc-color-font-primary);
+  text-transform: uppercase;
+  font-weight: 400;
+  text-align: center;
+}
+
