--- a/Frontend/css/login.css
+++ b/Frontend/css/login.css
@@ -15,31 +15,12 @@
   margin-top: 20px;
 }
 
-.dsc-form-controls-container {
-  width: 100%;
-  display: grid;
-  margin: 30px 0;
-}
-
-.dsc-form-control {
-  width: 100%;
-  height: 40px;
-  font-size: 16px;
-  margin: 10px 0;
-  padding: 0 20px;
-  color: var(--dsc-color-font-primary);
-  border-radius: 4px;
-  border: 1px solid var(--dsc-color-card-border);
-}
-
-.dsc-form-control:focus {
-  outline: none;
-}
-
-.dsc-form-control::placeholder {
-  color: var(--dsc-color-font-placeholder);
-}
-
 .dsc-login-form-button {
   width: 100%;
+}
+
+@media (min-width: 576px) {
+  #login-section {
+    padding: 0 40px;
+  }
 }
