--- a/Frontend/css/styles.css
+++ b/Frontend/css/styles.css
@@ -43,7 +43,7 @@ main {
 }
 /*------------------------------------------------*/
 /*header styles*/
-header { 
+header {
   background-color: var(--dsc-color-bg-secondary);
   width: 100%;
   height: 70px;
@@ -118,7 +118,7 @@ nav a {
   padding: 20px 0;
 }
 
-@media(min-width:576px ){
+@media (min-width: 576px) {
   .dsc-btn-container {
     width: 280px;
   }
@@ -158,7 +158,7 @@ nav a {
 }
 
 .dsc-btn-next-page {
-  border: 1px solid var(--dsc-color-btn-primary) ;
+  border: 1px solid var(--dsc-color-btn-primary);
   padding: 10px;
   border-radius: 4px;
   color: var(--dsc-color-btn-primary);
@@ -168,6 +168,7 @@ nav a {
   cursor: pointer;
   margin-top: 20px;
 }
+
 /*---------------------------------------------*/
 /*form styles*/
 .dsc-form {
@@ -185,3 +186,37 @@ nav a {
   text-align: center;
 }
 
+.dsc-form-controls-container {
+  width: 100%;
+  display: grid;
+  margin: 30px 0;
+}
+
+.dsc-form-control {
+  width: 100%;
+  height: 40px;
+  font-size: 16px;
+  margin: 10px 0;
+  padding: 0 20px;
+  color: var(--dsc-color-font-primary);
+  border-radius: 4px;
+  border: 1px solid var(--dsc-color-card-border);
+}
+
+.dsc-form-control:focus {
+  outline: none;
+}
+
+.dsc-input-error {
+  border: 1px solid var(--dsc-color-error);
+}
+
+.dsc-form-error {
+  color: var(--dsc-color-error);
+  font-size: 12px;
+  padding-left: 4px;
+}
+
+.dsc-form-control::placeholder {
+  color: var(--dsc-color-font-placeholder);
+}
