--- a/Frontend/css/styles.css
+++ b/Frontend/css/styles.css
@@ -88,6 +88,15 @@ nav a {
 .dsc-menu-item-active {
   font-weight: 700;
 }
+
+.dsc-logger-user {
+  font-size: 14px;
+  font-weight: 700;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
 /*----------------------------------------------*/
 /*generic styles-*/
 
