--- a/Frontend/css/styles.css
+++ b/Frontend/css/styles.css
@@ -145,6 +145,7 @@ nav a {
 .dsc-btn {
   width: 100%;
   height: 42px;
+  margin-bottom: 20px;
   border-radius: 4px;
   font-size: 16px;
   font-weight: 700;
@@ -162,6 +163,7 @@ nav a {
 .dsc-btn-white {
   background-color: var(--dsc-color-btn-inverse);
   color: var(--dsc-color-btn-primary);
+  border: 1px solid var( --dsc-color-btn-primary);
 }
 
 .dsc-btn-next-page {
