--- a/Frontend/css/styles.css
+++ b/Frontend/css/styles.css
@@ -216,6 +216,14 @@ nav a {
   outline: none;
 }
 
+.dsc-form-weight {
+  height: 128px;
+}
+
+.dsc-form-weight::placeholder {
+  margin: 0 0 0;
+}
+
 .dsc-input-error {
   border: 1px solid var(--dsc-color-error);
 }
@@ -224,6 +232,24 @@ nav a {
   color: var(--dsc-color-error);
   font-size: 12px;
   padding-left: 4px;
+}
+
+.dsc-select:invalid {
+  color: var(--dsc-color-font-placeholder);
+}
+
+.dsc-select option[disabled] {
+display: none;
+}
+
+.dsc-select option {
+  color: var(--dsc-color-font-primary);
+}
+
+.dsc-textarea {
+  resize: none;
+  height: 128px;
+  padding-top: 10px;
 }
 
 .dsc-form-control::placeholder {
