--- a/Frontend/css/product-listing.css
+++ b/Frontend/css/product-listing.css
@@ -5,9 +5,9 @@
 }
 
 .dsc-title-listing {
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: center;
   color: var(--dsc-color-font-primary);
   font-size: 16px;
 }
@@ -15,6 +15,19 @@
 .dsc-product-listing-image {
   width: 69px;
   height: 69px;
-  
 }
 
+.dsc-product-listing-btn {
+  height: 20px;
+  width: auto;
+ cursor: pointer;
+ margin: 5px;
+}
+
+@media(min-width: 576px){
+  .dsc-title-listing{
+    display: flex;
+    justify-content: left;
+    font-size: 24px;
+  }
+}
