--- a/Frontend/css/styles.css
+++ b/Frontend/css/styles.css
@@ -160,6 +160,13 @@ nav a {
   padding: 10px;
   border-bottom: 1px solid var(--dsc-color-font-placeholder);
 }
+.dsc-p20 {
+  padding: 0 10px;
+}
+
+.dsc-txt-left {
+  text-align: left;
+}
 
 /*----------------------------------*/
 /*button styles*/
@@ -324,8 +331,87 @@ nav a {
 
 .dsc-table thead {
   background-color: var(--dsc-color-font-tertiary);
+  height: 55px;
+  font-size: 14px;
+}
+
+.dsc-table thead,
+th {
+  padding-left: 5px;
+  color: var(--dsc-color-font-primary);
 }
 
 .dsc-table tbody {
+  text-align: center;
   background-color: var(--dsc-color-font-tertiary);
+  color: var(--dsc-color-font-primary);
+}
+
+.dsc-table th:nth-child(2) {
+  border-top-left-radius: 10px;
+}
+
+.dsc-table th:nth-child(6) {
+  border-top-right-radius: 10px;
+}
+
+.dsc-table td:nth-child(2) {
+  padding-left: 10px;
+}
+
+.dsc-table td:nth-child(4) {
+  font-size: 12px;
+}
+
+.dsc-table td:last-child {
+  padding-right: 5px;
+}
+
+.dsc-tb576 {
+  display: none;
+}
+
+.dsc-tb768 {
+  display: none;
+}
+
+@media (min-width: 576px) {
+  .dsc-tb576 {
+    display: table-cell;
+  }
+
+  .dsc-table th:nth-child(1) {
+    padding-left: 20px;
+    border-top-left-radius: 10px;
+  }
+
+  .dsc-table th:nth-child(2) {
+    border-top-left-radius: 0;
+  }
+
+  .dsc-table td:nth-child(1) {
+    padding-left: 20px;
+  }
+
+  .dsc-table td:nth-child(2) {
+    padding-left: 0;
+  }
+
+  .dsc-table thead,
+  th {
+    padding-left: 0;
+    color: var(--dsc-color-font-primary);
+  }
+}
+
+@media (min-width: 768px) {
+  .dsc-tb768 {
+    display: table-cell;
+  }
+}
+
+@media (min-width: 992px) {
+  .dsc-table tbody {
+    font-size: 16px;
+  }
 }
