--- a/Frontend/css/styles.css
+++ b/Frontend/css/styles.css
@@ -53,7 +53,6 @@ header {
 }
 
 nav {
-  color: var(--dsc-color-font-primary);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -73,8 +72,17 @@ nav a {
   align-items: center;
 }
 
+.dsc-menu-itens-container {
+  display: flex;
+}
+
+.dsc-menu-itens-container img {
+  width: 20px;
+  height: 20px;
+}
+
 .dsc-menu-item {
-  margin-right: 20px;
+  margin: 0 20px 0 0;
   display: flex;
   align-items: center;
 }
@@ -89,9 +97,18 @@ nav a {
   font-weight: 700;
 }
 
-.dsc-logger-user {
+.dsc-menu-inicio {
+  display: none;
+}
+
+.dsc-menu-inicio p {
   font-size: 14px;
   font-weight: 700;
+}
+
+.dsc-logger-user {
+  font-size: 12px;
+  font-weight: 400;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -140,13 +157,49 @@ nav a {
   border-radius: 0 4px 4px 0;
 }
 
+@media (min-width: 576px) {
+
+  .dsc-menu-item {
+    margin: 0 5px;
+    display: flex;
+    align-items: center;
+  }
+
+  .dsc-menu-inicio {
+    display: flex;
+    text-align: center;
+    padding: 10px 10px 0 0;
+    margin-right: 10px;
+  }
+
+  .dsc-menu-inicio p {
+    font-size: 14px;
+    font-weight: 700;
+  }
+}
+
 /*----------------------------------------------*/
 /*generic styles-*/
+
+.dsc-header-client {
+  background-color: var(--dsc-color-bg-secondary);
+  color: var(--dsc-color-font-primary);
+}
+
+.dsc-header-admin {
+  background-color: var(--dsc-color-font-secondary);
+  color: var(--dsc-color-font-tertiary);
+}
+
+nav h1 {
+  font-size: 16px;
+}
 
 .dsc-container {
   width: 100%;
   max-width: 960px;
   margin: 0 auto;
+  padding: 2px;
 }
 
 .dsc-card {
@@ -168,17 +221,18 @@ nav a {
   text-align: left;
 }
 
+@media (min-width: 576px) {
+  nav h1 {
+    font-size: 24px;
+    margin-left: 15px;
+  }
+}
+
 /*----------------------------------*/
 /*button styles*/
 .dsc-btn-container {
   width: 100%;
   padding: 20px 0 0;
-}
-
-@media (min-width: 576px) {
-  .dsc-btn-container {
-    width: 280px;
-  }
 }
 
 .btn {
@@ -240,6 +294,12 @@ nav a {
   font-weight: 700;
   cursor: pointer;
   margin-bottom: 20px;
+}
+
+@media (min-width: 576px) {
+  .dsc-btn-container {
+    width: 280px;
+  }
 }
 
 /*---------------------------------------------*/
